# journal-reader

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/: journal-reader.desktop
include/: setup.hpp
include/enums/: priority_enum.hpp
include/model/: journal_model.hpp
include/structs/: journal_entry.hpp  journal_model.hpp
include/widgets/: boot_widget.hpp  details_view.hpp  filter_frame.hpp  main_frame.hpp  main_window.hpp  page_widget.hpp
src/: journal_model.cpp  main.cpp
src/widgets/: boot_widget.cpp  details_view.cpp  filter_frame.cpp  main_frame.cpp  main_window.cpp  page_widget.cpp
